Fix spacing in input-date

--- a/src/components/input/date/style.css
+++ b/src/components/input/date/style.css
@@ -25,7 +25,7 @@
 }
 :host[show-label] > .smoothly-date-placeholder,
 :host[show-label] > smoothly-date-text {
-	margin-inline: var(--input-padding-side) auto;
+	margin-inline: var(--input-padding-side);
 	margin-block: var(--input-value-padding-top) var(--input-value-padding-bottom);
 }
 :host:not([show-label]) > .smoothly-date-placeholder,
@@ -79,4 +79,5 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	margin-left: auto;
 }
